fix layout issues and update logo

--- a/src/styles/application/components/_installedAppsView.scss
+++ b/src/styles/application/components/_installedAppsView.scss
@@ -1,4 +1,3 @@
-.pf-c-content 
 .integr8ly-installed-apps-view {
   height: 116vh;
   margin-bottom: 0;
@@ -52,11 +51,11 @@
       border-bottom: var(--pf-global--BorderWidth--sm) solid transparent;
       box-shadow: 0 1px 1px rgba(0, 0, 0, .1);
       padding: 15px;
+    }
 
-      p {
-        margin-bottom: 0;
-        color: #282d33;
-      }
+    li p {
+      margin-bottom: 0;
+      color: #282d33;
     }
 
     & li:hover {
@@ -70,22 +69,20 @@
   }
 }
 
-.pf-c-content 
+/* stylelint-disable */
 .integr8ly-state-provisioining {
-  color: $pf-color-black-600;
+  color: $pf-color-black-600 !important;
 }
 
-.pf-c-content 
 .integr8ly-state-ready {
-  color: $pf-color-green-400;
+  color: $pf-color-green-400 !important;
 }
 
-.pf-c-content 
 .integr8ly-state-unavailable {
-  color: var(--pf-global--danger-color--100);
+  color: var(--pf-global--danger-color--100) !important;
 }
 
-.pf-c-content 
 .integr8ly-panel-title {
-  background-color: $pf-color-white;
+  background-color: $pf-color-white !important;
 }
+/* stylelint-enable */
