--- a/src/styles/application/components/_tutorialDashboard.scss
+++ b/src/styles/application/components/_tutorialDashboard.scss
@@ -1,7 +1,7 @@
 .integr8ly-tutorial-dashboard {
   height: 100vh;
   margin-bottom: 0;
-  background-color: $pf-color-black-150;
+  background-color: #ededed;
   border: 0;
   box-shadow: none;
 
@@ -20,6 +20,13 @@
       min-height: 250px;
     }
   }
+
+  /* stylelint-disable */
+  & .panel-heading,
+  .cards-pf {
+    background-color: #ededed;
+  }
+  /* stylelint-enable */
 
   & .panel-title { /* stylelint-disable-line selector-class-pattern */
     display: flex;
